<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".AccMonitorActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ToggleButton
            android:id="@+id/sensor_monitor"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textOn="@string/monitor"
            android:textSize="15sp" />

        <Button
            android:id="@+id/save_sensor_file"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/save_sensor_file"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sensor_clear"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="15sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sensor_output"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minLines="0"
                android:overScrollMode="always"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>